# SingularityA

indra/: CMakeLists.txt
indra/cmake/: SLXP.cmake  TKO.cmake
indra/llappearance/: llavatarappearance.h  llavatarjointmesh.h
indra/llinventory/: CMakeLists.txt  llpermissions.cpp
indra/llprimitive/: lldaeloader.cpp  lldaeloader.h  llmodelloader.h
indra/newview/: CMakeLists.txt  awavefront.cpp  daeexport.cpp  daeexport.h  llfloatermodelpreview.cpp  llinventorybridge.cpp  llpreviewanim.cpp  llpreviewsound.cpp  llpreviewtexture.cpp  llstartup.cpp  llviewermenu.cpp  llviewerobjectbackup.cpp  llvoavatar.h  slxpexport.cpp  slxpexport.h
indra/newview/app_settings/: settings.xml
indra/newview/skins/default/xui/en-us/: floater_dae_export.xml  menu_pie_attachment.xml  menu_pie_avatar.xml  menu_pie_object.xml  menu_pie_self.xml  notifications.xml
indra/slxp/: CMakeLists.txt  slxp.cpp  slxp.h
indra/tko/: CMakeLists.txt  special_functionality.cpp  special_functionality.h
